Fix screenshot alignment

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ h1 {
   color: #623b0c;
   font-family: "Denk One", sans-serif;
   margin-left: 0;
-  padding-left: .35em;
+  padding-left: .36em;
   padding-top: .07em;
   padding-bottom: .6em;
   line-height: 0;
@@ -53,9 +53,11 @@ ol {
   padding: .5em .75em .6em;
   padding-bottom: 1rem;
   height: 960px;
+
+  justify-content: center;
 }
 
-ol li {
+ol > li {
   background-color: #ede3db;
   width: 100%;
   border-style: solid;
@@ -70,7 +72,6 @@ ol li {
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
 }
 
 ul p {
